--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -12,7 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ethers": "^5.7.2",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "helmet": "^8.1.0",
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
@@ -27,5 +27,8 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
