Initial commit: migrated to Supabase, updated NextAuth integration

--- a/package.json
+++ b/package.json
@@ -3,36 +3,61 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "check:env": "tsx scripts/check-env.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup:db": "tsx scripts/init-db.ts",
+    "test:connection": "tsx scripts/test-connection.ts",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:restart": "docker-compose restart",
+    "docker:logs": "docker-compose logs -f",
+    "docker:logs:app": "docker-compose logs -f app",
+    "docker:logs:redis": "docker-compose logs -f redis",
+    "docker:logs:hardhat": "docker-compose logs -f hardhat",
+    "docker:shell:app": "docker-compose exec app sh",
+    "docker:shell:redis": "docker-compose exec redis sh",
+    "docker:shell:hardhat": "docker-compose exec hardhat sh",
+    "docker:redis:cli": "docker-compose exec redis redis-cli",
+    "docker:hardhat:console": "docker-compose exec hardhat npx hardhat console"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^1.9.1",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.50.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "bcryptjs": "^3.0.2",
     "ethers": "^6.7.1",
-    "mongodb": "^5.7.0",
-    "mongoose": "^7.4.3",
     "next": "^14.0.0",
     "next-auth": "^4.23.1",
+    "node-fetch": "^2.7.0",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "resend": "^4.5.1",
     "tailwindcss": "^3.3.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "@types/pg": "^8.15.4",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "dotenv": "^16.5.0",
     "eslint": "^8.49.0",
     "eslint-config-next": "^13.4.19",
+    "pg": "^8.11.3",
+    "supabase": "^2.24.3",
+    "tsx": "^4.19.4",
     "typescript": "^5.3.3"
   }
 }
