--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,9 @@ yarn-debug.log*
 yarn-error.log*
 
 # Local env files
-.env*.local
-.env
+# .env*.local
+# .env
+.env.local  # Explicitly including this file
 
 # IDE
 .vscode/
@@ -47,3 +48,11 @@ next-env.d.ts
 # Vercel
 .vercel
 .env
+
+# Add to .gitignore if not already present
+node_modules/
+.env
+.env.local
+.next/
+out/
+*.log
